[package]
name = "grid-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
grid = {version = "0.16.2", features = ["serde"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
thiserror = "2.0.12"
uuid = { version = "1.10.0", features = ["v4"] }
wasm-bindgen = "0.2.92"
