[package]
name = "grid-engine"
version = "0.1.1"
edition = "2024"
authors = ["Thiago Ramos"]
description = "A flexible and efficient library for managing 2D grid-based layouts with automatic collision handling and dynamic vertical expansion"
documentation = "https://docs.rs/grid-engine"
repository = "https://github.com/thiagodejesus/grid-engine"
readme = "README.md"
keywords = ["grid", "layout", "collision", "2d", "dashboard"]
categories = ["data-structures"]
license = "MIT"

[dependencies]
grid = "0.17.0"
thiserror = "2.0.12"
